--- a/styles/style.css
+++ b/styles/style.css
@@ -204,6 +204,11 @@ html {
   border: 4px solid;
   border-image: linear-gradient(135deg, #4bf608 0%, #ecf004 25%, #f15353 50%, #0594e7 75%, #8e16f0 100%) 1;
   background-color: rgb(201, 223, 187);
+  font-size: 20px;
+  color: #045820;
+  font-family: 'Permanent Marker', cursive;
+  line-height: 1.2;
+  letter-spacing: 0.8px;
   overflow: scroll;
 }
 
@@ -213,19 +218,15 @@ html {
 }
 
 .list_table {
-  margin: 20px;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  line-height: 1.2;
-  letter-spacing: 0.8px;
-  font-size: 15px;
-  color: #045820;
-  font-family: 'Permanent Marker', cursive;
+  margin: 15px;
+}
+
+table {
+  margin: 0 auto;
 }
 
 th {
-  font-size: 19px;
+  font-size: 25px;
   text-decoration: underline;
   text-decoration-style: double;
   padding: 5px;
