--- a/styles/style.css
+++ b/styles/style.css
@@ -217,10 +217,10 @@ html {
   border: 4px solid;
   border-image: linear-gradient(135deg, #4bf608 0%, #ecf004 25%, #f15353 50%, #0594e7 75%, #8e16f0 100%) 1;
   background-color: rgb(201, 223, 187);
-  font-size: 20px;
+  font-size: 18px;
   color: #045820;
   font-family: 'Permanent Marker', cursive;
-  line-height: 1.3;
+  line-height: 1;
   letter-spacing: 0.8px;
   overflow: scroll;
   transition: 0.5s;
@@ -242,11 +242,15 @@ table {
 }
 
 th {
-  font-size: 25px;
+  font-size: 22px;
   text-decoration: underline;
   text-decoration-style: double;
-  padding: 5px 5px 25px 5px;
+  padding: 25px 5px 25px 5px;
   font-weight: bold;
+}
+
+td {
+  padding: 2px;
 }
 
 @keyframes modal-appear {
