feat: add score text to overlay

--- a/styles/style.css
+++ b/styles/style.css
@@ -205,11 +205,11 @@ html {
 
 .list_modal {
   visibility: hidden;
+  position: absolute;
   top: 50%;
   left: 50%;
-  position: absolute;
-  width: 75vw;
-  height: 75vh;
+  max-width: 600px;
+  height: 80vh;
   margin: 0 auto;
   z-index: 1001;
   text-align: center;
@@ -234,7 +234,7 @@ html {
 }
 
 .list_table {
-  margin: 15px;
+  margin: 20px;
 }
 
 table {
@@ -316,7 +316,7 @@ td {
 }
 
 .overlay {
-  display: none;
+  visibility: hidden;
   position: fixed;
   left: 0;
   top: 0;
@@ -325,35 +325,73 @@ td {
   width: 100vw;
   height: 100vh;
   margin: 0 auto;
-  font-family: 'Permanent Marker', cursive;
+  display: flex;
+  flex-direction: column;
   background-size: cover;
-  color:rgb(133, 253, 21);
-  text-shadow: 4px 2px 2px rgb(58, 53, 53),
-  5px 4px 4px rgb(252, 247, 247);
-  font-weight: bold;
-  text-transform: uppercase;
-  line-height: 1.5;
-  letter-spacing: 8px;
   z-index: 1000;
   overflow: hidden;
   align-items: center;
   justify-content: center;
   transform: translateZ(0);
+  font-family: 'Permanent Marker', cursive;
+  text-shadow: 4px 2px 2px rgb(58, 53, 53),
+  5px 4px 4px rgb(252, 247, 247);
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 1.5;
+  letter-spacing: 8px;
+}
+
+.overlay_text {
+  color:rgb(133, 253, 21);
+  animation: overlay-text-grow 500ms forwards;
+}
+
+.score_message {
+  position: absolute;
+  top: 70%;
+  font-size: 10vw;
+  color: #1c8f42;
+  z-index: 1001;
+  animation: message-grow 4s linear infinite;
+  transform: translateZ(0);
 }
 
 .overlay.visible {
-  display: flex;
+  /* .overlay { */
+  visibility: visible;
   animation: overlay-grow 500ms forwards;
 }
 
 @keyframes overlay-grow {
   from {
     background-color: rgba(0, 0, 0, 0);
-    font-size: 0;
   }
   to {
     background-color: rgba(173, 146, 131, 0.596);
+  }
+}
+
+@keyframes overlay-text-grow {
+  from {
+    font-size: 0;
+  }
+  to {
     font-size: 8vw;
+  }
+}
+
+@keyframes message-grow {
+  0% {
+    font-size: 0;
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+    font-size: 10vw;
+  }
+  100% {
+    transform: translateY(-300%);
   }
 }
 
