--- a/styles/style.css
+++ b/styles/style.css
@@ -299,7 +299,7 @@ td {
   position: absolute;
   top: 70%;
   font-size: 10vw;
-  color: #1c8f42;
+  color: rgb(255, 196, 0);
   z-index: 1001;
   animation: message-grow 4s linear infinite;
   transform: translateZ(0);
@@ -337,6 +337,75 @@ td {
   opacity: 1;
   width: 60px;
   height: 120px;
+}
+
+.modal_overlay {
+  visibility: hidden;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 auto;
+  background-size: cover;
+  z-index: 1000;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  animation: list-hide 500ms;
+  transform: translateZ(0);
+}
+
+.modal_overlay.visible {
+/* .modal_overlay { */
+  visibility: visible;
+  animation: list-grow 500ms forwards;
+}
+
+.modal_overlay.visible .modal {
+/* .modal_overlay .modal { */
+  animation: modal-appear 0.5s linear forwards;
+}
+
+.modal {
+  visibility: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 320px;
+  height: 50px;
+  margin: 0 auto;
+  z-index: 1001;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  border: 4px solid;
+  border-image: linear-gradient(135deg, #4bf608 0%, #ecf004 25%, #f15353 50%, #0594e7 75%, #8e16f0 100%) 1;
+  background-color: rgb(201, 223, 187);
+  font-size: 20px;
+  color: #045820;
+  font-family: 'Permanent Marker', cursive;
+  line-height: 1;
+  letter-spacing: 0.8px;
+  overflow: hidden;
+  transition: 0.5s;
+  animation: modal-hide 0.5s linear;
+  transform: translateZ(0);
+}
+
+#check_button {
+  height: 50px;
+  width: 60px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(123, 160, 101);
+}
+
+#check_button:hover {
+  cursor: pointer;
+  background-color: rgb(93, 122, 76);
 }
 
 @keyframes modal-appear {
@@ -634,7 +703,7 @@ td {
   grid-column: 1 / -1;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
 .game_info {
@@ -651,17 +720,20 @@ td {
 .cards_container {
   display: grid;
   grid-template-columns: repeat(6, auto);
-  grid-gap: 15px;
+  grid-gap: 1vw;
   margin: 20px auto;
   align-items: center;
   justify-content: center;
   perspective: 1000px;
 }
 
+.card, .bubble, .back_image {
+  width: 120px;
+}
+
 .card {
   position: relative;
-  width: 110px;
-  height: 110px;
+  height: 120px;
   cursor: pointer;
 }
 
@@ -680,17 +752,12 @@ td {
   filter: drop-shadow(8px 8px 10px rgb(41, 38, 35));
 }
 
-.bubble {
-  width: 110px;
-}
-
 .animal {
   position: absolute;
-  width: 75px;
+  width: 95px;
 }
 
 .back_image {
-  width: 110px;
   filter: drop-shadow(8px 8px 10px rgb(41, 38, 35));
 }
 
