feat: change preloader func, add percentage

--- a/styles/preloader.css
+++ b/styles/preloader.css
@@ -6,7 +6,7 @@
   height: 100%;
   z-index: 100;
   background-color: rgb(203, 243, 215);
-  transition: all 0.6s;
+  transition: all 0.5s;
   opacity: 1;
   visibility: visible;
 }
@@ -26,7 +26,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  transition: all 0.6s;
+  /* transition: all 0.5s; */
 
 }
 
