--- a/styles/amedia.css
+++ b/styles/amedia.css
@@ -1,3 +1,14 @@
+@media only screen and (min-width:1280px) {
+  .menu_element {
+    margin: 40px;
+    width: 400px;
+    height: 131px;
+  }
+  .menu_element span {
+    font-size: 40px;
+  }
+}
+
 @media only screen and (max-width:767px) {
   .btn_img {
     width: 33vw;
