--- a/styles/amedia.css
+++ b/styles/amedia.css
@@ -69,7 +69,7 @@
     width: 10px;
     height: 10px;
   }
-  .card {
+  /* .card {
     height: 85px;
   }
   .card, .bubble, .back_image {
@@ -77,5 +77,5 @@
   }
   .animal {
     width: 65px;
-  }
+  } */
 }
